--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,9 @@ html {
 }
 
 .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -48,4 +51,281 @@ ol {
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
+}
+
+.content {
+  display: grid;
+  align-items: end;
+  width: 100%;
+  gap: 30px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 1fr;
+  grid-template-areas:
+    "result details"
+    "result details";
+}
+
+.search-form {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-wrap: wrap;
+  gap: 38px;
+}
+
+.search-form__fieldset {
+  flex-grow: 1;
+  border: none;
+}
+
+.search-form__fieldset-title {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 100%;
+  margin-bottom: 5px;
+}
+
+.content__details {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  grid-area: details;
+  flex-direction: column;
+}
+
+.result {
+  grid-area: result;
+}
+
+.content__list-item {
+  display: block;
+  padding: 0 3px;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: flex-start;
+}
+
+.content__video-card-thumbnail {
+  display: block;
+  object-position: center;
+  object-fit: cover;
+  width: 194px;
+  height: 103px;
+  overflow-x: auto;
+  flex-shrink: 0;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.title {
+  text-transform: uppercase;
+  font-family: Oswald, sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 0.95;
+  margin-bottom: 26px;
+}
+
+.title .content__accent {
+  color: gray;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color: white;
+}
+
+.content__video-card-title {
+  display: block;
+  font-family: Oswald, sans-serif;
+  text-transform: uppercase;
+  font-size: 30px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 192px; 
+}
+
+.content__video-card-description {
+  display: -webkit-box;
+  -webkit-line-clamp:2;
+  -webkit-box-orient:vertical;
+  overflow: hidden;
+  line-height: 20px;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.search-form__checkbox {
+  appearance: none;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  width: auto;
+  cursor: pointer;
+  position: relative;
+  padding: 4px 0;
+}
+
+.search-form__label:has(.search-form__textfield:focus-visible) {
+  outline: 1px solid white;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 19px;
+  height: 19px;
+  border: 1px solid white;
+  flex-shrink: 0;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0;
+  border: 1px solid black;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+  background-color: white;
+}
+
+.search-form__label:has(.search-form__checkbox:focus-visible) {
+  outline: 1px solid white;
+  outline-offset: 2px;
+}
+
+.button {
+  display: inline-block;
+  border: 1px solid white;
+  background: transparent;
+  outline: none;
+  font-family: 'inherit';
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+
+.search-form__submit-button {
+  align-self: flex-end;
+  align-items: end;
+  padding: 6px 73.5px;
+}
+
+.more-button {
+  width: 100%;
+  margin-top: 30px;
+  padding: 6px 142px;
+}
+
+.button:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.button:focus-visible {
+  outline: 1px solid white;
+  outline-offset: 1px;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color: white;
+}
+
+.content__list-item {
+  display: block;
+  padding: 0 3px;
+}
+
+.content__card-link_current {
+  display: block;
+  background-color: #545050;
+}
+
+.content__list-item:hover {
+  text-decoration: underline;
+  text-underline-offset: 1px;
+  text-decoration-color: white;
+  text-decoration-skip-ink: none;
+}
+
+.content__list-item:focus {
+  outline: none;
+}
+
+.content__list-item:focus-visible {
+  outline: 1px solid white;
+  outline-offset: 1px;
+}
+
+.content__list-item:active {
+  background-color: #545050;
+}
+
+.result__video {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.result__video-container {
+  position: relative;
+  width: 711px;
+  height: 386px;
+  margin-bottom: 16px;
+}
+
+.content__list-container {
+  position: relative;
+  width: 399px;
+  height: 298px;
+  overflow-y: auto;
 }
