--- a/styles/style.css
+++ b/styles/style.css
@@ -113,8 +113,7 @@ ol {
   object-fit: cover;
   width: 194px;
   height: 103px;
-  overflow-x: auto;
-  flex-shrink: 0;
+flex-shrink: 0;
 }
 
 .content__video-card-description-container {
@@ -137,7 +136,8 @@ ol {
 }
 
 .title .content__accent {
-  color: gray;
+  color: #545050;
+;
 }
 
 .content__card-link {
@@ -155,11 +155,12 @@ ol {
   white-space: nowrap;
   overflow: hidden;
   max-width: 192px; 
+  line-height: 0.98;
 }
 
 .content__video-card-description {
   display: -webkit-box;
-  -webkit-line-clamp:2;
+  -webkit-line-clamp:4;
   -webkit-box-orient:vertical;
   overflow: hidden;
   line-height: 20px;
@@ -238,7 +239,7 @@ ol {
   border: 1px solid white;
   background: transparent;
   outline: none;
-  font-family: 'inherit';
+  font-family: 'Fira Sans Condensed';
   font-size: 18px;
   font-weight: 700;
   text-align: center;
@@ -265,7 +266,7 @@ ol {
 }
 
 .button:focus-visible {
-  outline: 1px solid white;
+  outline: none;
   outline-offset: 1px;
 }
 
@@ -289,15 +290,11 @@ ol {
   background-color: #545050;
 }
 
-.content__list-item:hover {
+.content__card-link:hover {
   text-decoration: underline;
   text-underline-offset: 1px;
   text-decoration-color: white;
   text-decoration-skip-ink: none;
-}
-
-.content__list-item:focus {
-  outline: none;
 }
 
 .content__list-item:focus-visible {
@@ -305,13 +302,14 @@ ol {
   outline-offset: 1px;
 }
 
-.content__list-item:active {
+.content__card-link:active {
   background-color: #545050;
 }
 
 .result__video {
   display: block;
   width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
 }
