--- a/styles/style.css
+++ b/styles/style.css
@@ -71,11 +71,13 @@ ol {
   align-items: start;
   flex-wrap: wrap;
   gap: 38px;
+  height: 54px;
 }
 
 .search-form__fieldset {
   flex-grow: 1;
   border: none;
+  width: 212px;
 }
 
 .search-form__fieldset-title {
@@ -131,13 +133,12 @@ flex-shrink: 0;
   font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 75px;
-  line-height: 0.95;
+  line-height: 0.94;
   margin-bottom: 26px;
 }
 
 .title .content__accent {
   color: #545050;
-;
 }
 
 .content__card-link {
@@ -155,7 +156,7 @@ flex-shrink: 0;
   white-space: nowrap;
   overflow: hidden;
   max-width: 192px; 
-  line-height: 0.98;
+  line-height: 1;
 }
 
 .content__video-card-description {
@@ -194,6 +195,22 @@ flex-shrink: 0;
   cursor: pointer;
   position: relative;
   padding: 4px 0;
+}
+
+.search-form__textfield {
+  width: 100%;
+  min-width: 224px;
+  font-family: "Fira Sans Condensed", "sans-serif";
+  color: white;
+  font-size: 18px;
+  padding: 2.5px 14px 2.5px 0;
+  background-color: #1b1919;
+  appearance: none;
+  outline: none;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  border-left: none;
+  border-right: none;
 }
 
 .search-form__label:has(.search-form__textfield:focus-visible) {
@@ -239,7 +256,7 @@ flex-shrink: 0;
   border: 1px solid white;
   background: transparent;
   outline: none;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', "sans-serif";
   font-size: 18px;
   font-weight: 700;
   text-align: center;
