--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  inline-size: 1200px;
+  inline-size: 1140px;
   block-size: 100%;
   margin: auto;
   color: #fff;
@@ -71,7 +71,6 @@ ol {
   align-items: start;
   flex-wrap: wrap;
   gap: 38px;
-  height: 54px;
 }
 
 .search-form__fieldset {
@@ -204,7 +203,7 @@ flex-shrink: 0;
   color: white;
   font-size: 18px;
   padding: 2.5px 14px 2.5px 0;
-  background-color: #1b1919;
+  background-color: transparent;
   appearance: none;
   outline: none;
   border-top: 1px solid white;
